--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
                         <h2 class="how__title title title_center">Psycho</h2>
                         <div class="how__items">
                             <div class="how__item item-how item-how_1">
-                                <a href="" class="item-how__icon">
-                                    <img src="img/1.jfif" alt="01" />
+                                <a
+                                    href="https://sdasha10.github.io/Website/"
+                                    class="item-how__icon"
+                                >
+                                    <img src="img/1.png" alt="01" />
                                 </a>
-                                <a href="" class="item-how__title"
+                                <a
+                                    href="https://sdasha10.github.io/Website/"
+                                    class="item-how__title"
                                     >Основний сайт</a
                                 >
                                 <div class="item-how__text">
                                     Ознайомтесь з послугами, які ми пропонуємо
+                                    (зерно)
                                 </div>
                             </div>
                             <div class="how__item item-how item-how_2">
